--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/seedrandom": "^3.0.5",
     "axios": "^1.3.4",
+    "fakerator": "^0.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-virtualized-auto-sizer": "^1.0.7",
