--- a/package.json
+++ b/package.json
@@ -1,32 +1,41 @@
 {
-  "name": "task-5",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@types/seedrandom": "^3.0.5",
-    "axios": "^1.3.4",
-    "fakerator": "^0.3.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-virtualized-auto-sizer": "^1.0.7",
-    "react-window": "^1.8.8",
-    "react-window-infinite-loader": "^1.0.8",
-    "seedrandom": "^3.0.5"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/react-window": "^1.8.5",
-    "@types/react-window-infinite-loader": "^1.0.6",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
-  }
+    "name": "task-5",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@mui/material": "^5.11.5",
+        "@types/seedrandom": "^3.0.5",
+        "axios": "^1.3.4",
+        "fakerator": "^0.3.6",
+        "react": "^18.2.0",
+        "react-csv": "^2.2.2",
+        "react-dom": "^18.2.0",
+        "react-virtualized-auto-sizer": "^1.0.7",
+        "react-window": "^1.8.8",
+        "react-window-infinite-loader": "^1.0.8",
+        "seedrandom": "^3.0.5"
+    },
+    "devDependencies": {
+        "@faker-js/faker": "^7.6.0",
+        "@types/react": "^18.0.27",
+        "@types/react-csv": "^1.1.3",
+        "@types/react-dom": "^18.0.10",
+        "@types/react-virtualized-auto-sizer": "^1.0.1",
+        "@types/react-window": "^1.8.5",
+        "@types/react-window-infinite-loader": "^1.0.6",
+        "@types/seedrandom": "^3.0.4",
+        "@vitejs/plugin-react": "^3.1.0",
+        "install": "^0.13.0",
+        "npm": "^9.6.2",
+        "typescript": "^4.9.3",
+        "vite": "^4.1.0"
+    }
 }
