--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
+        "dev": "vite && tailwindcss build -i src/styles.css -o public/styles.css",
+        "build": "tsc && vite build && tailwindcss build -i src/styles.css -o public/styles.css",
         "preview": "vite preview"
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@mui/material": "^5.11.5",
-        "@types/seedrandom": "^3.0.5",
-        "axios": "^1.3.4",
         "fakerator": "^0.3.6",
         "react": "^18.2.0",
         "react-csv": "^2.2.2",
@@ -21,20 +19,20 @@
         "react-virtualized-auto-sizer": "^1.0.7",
         "react-window": "^1.8.8",
         "react-window-infinite-loader": "^1.0.8",
+        "sass": "^1.59.3",
         "seedrandom": "^3.0.5"
     },
     "devDependencies": {
-        "@faker-js/faker": "^7.6.0",
         "@types/react": "^18.0.27",
         "@types/react-csv": "^1.1.3",
         "@types/react-dom": "^18.0.10",
         "@types/react-virtualized-auto-sizer": "^1.0.1",
         "@types/react-window": "^1.8.5",
         "@types/react-window-infinite-loader": "^1.0.6",
-        "@types/seedrandom": "^3.0.4",
+        "@types/seedrandom": "^3.0.5",
         "@vitejs/plugin-react": "^3.1.0",
-        "install": "^0.13.0",
-        "npm": "^9.6.2",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.7",
         "typescript": "^4.9.3",
         "vite": "^4.1.0"
     }
