--- a/package.json
+++ b/package.json
@@ -1,43 +1,61 @@
 {
-  "name": "test",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.18",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "test",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.18.18",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "5.0.1",
+        "typescript": "^4.9.5",
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@mui/material": "^5.11.5",
+        "fakerator": "^0.3.6",
+        "react": "^18.2.0",
+        "react-csv": "^2.2.2",
+        "react-dom": "^18.2.0",
+        "react-virtualized-auto-sizer": "^1.0.7",
+        "react-window": "^1.8.8",
+        "react-window-infinite-loader": "^1.0.8",
+        "seedrandom": "^3.0.5"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.27",
+        "@types/react-csv": "^1.1.3",
+        "@types/react-dom": "^18.0.10",
+        "@types/react-virtualized-auto-sizer": "^1.0.1",
+        "@types/react-window": "^1.8.5",
+        "@types/react-window-infinite-loader": "^1.0.6",
+        "@types/seedrandom": "^3.0.5",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.7"
+    },
+    "scripts": {
+        "start": "react-scripts start && tailwindcss build -i src/styles.css -o public/styles.css",
+        "build": "react-scripts build && tailwindcss build -i src/styles.css -o public/styles.css",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
